# audio-forge

./: .gitignore  AUDIT_REPORT.md  AudioForge.spec  Audit.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  PLAN_DEESSER_AND_LATENCY_CALIBRATION.md  PR1_AUDIT_REPORT.md  README.md  RELEASING.md  ROADMAP.md  build.ps1  build_exe.ps1  launcher.py  pyproject.toml  release-assets.json  semgrep-rulesets.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  release-package.yml
.planning/: AUDIT.md  CLEANUP_PLAN.md
.planning/todos/pending/: 2026-01-24-cleanup-redundant-files.md
logs/: logs.txt
pyinstaller-hooks/: hook-cffi.cparser.py  hook-pycparser.py  hook-scipy.special._ufuncs.py
python/: conftest.py  test_eq_ui_sync.py
python/mic_eq/: __init__.py  __main__.py  app_logging.py  config.py  mic_eq_core.pyi
python/mic_eq/analysis/: __init__.py  auto_eq.py  eq_quality.py  failure_detection.py  latency_calibration.py  spectrum.py  voice_setup.py
python/mic_eq/config_parts/: __init__.py  app_config.py  catalogs.py  presets.py  settings.py  shared.py  validation.py
python/mic_eq/ui/: __init__.py  analysis_worker.py  app_bootstrap.py  calibration_dialog.py  compressor_panel.py  eq_curve.py  (+14 more)
python/tests/: test_app_bootstrap.py  test_auto_eq.py  test_config_v17.py  test_config_vad.py  test_eq_ui_sync.py  test_gate_panel.py  test_health.py  test_latency_calibration.py  test_output_watchdog.py  test_package_identity.py  test_package_tools.py  test_spectrum.py  test_ui_sample_rate_and_diagnostics.py  test_voice_setup.py
python/tools/: check_versions.py  check_workflows.py  fetch_release_assets.py  health_check.py  package_smoke.py  prune_bundle.py  run_semgrep.py  self_test.py  verify_release_assets.py
release-notes/: release-notes-v1.7.10.md  release-notes-v1.7.11.md  release-notes-v1.7.12.md  release-notes-v1.7.17.md  release-notes-v1.7.18.md  release-notes-v1.7.3.md  release-notes-v1.7.4.md  release-notes-v1.7.5.md  release-notes-v1.7.6.md  release-notes-v1.7.7.md  release-notes-v1.7.8.md  release-notes-v1.7.9.md  release-notes-v1.8.0.md  release-notes-v1.8.1.md  release-notes-v1.8.2.md  release-notes-v1.8.3.md  release-notes-v1.8.4.md  release-notes-v1.8.5.md  release-notes-v1.8.6.md
requirements/: dev.txt  runtime.txt
rust-core/: Cargo.toml
rust-core/src/: lib.rs
rust-core/src/audio/: buffer.rs  clock.rs  device.rs  input.rs  mod.rs  output.rs  processor.rs  rt.rs
rust-core/src/audio/processor/: block_processor.rs  control.rs  diagnostics.rs  dsp_loop.rs  dynamics_controls.rs  eq_controls.rs  gate_controls.rs  noise_controls.rs  output_writer.rs  python_api.rs  raw_recording.rs  recovery.rs  resampling.rs  routing.rs  runtime_metrics.rs  status.rs  stress_harness.rs  supervisor.rs  tests.rs  vad_worker.rs
rust-core/src/dsp/: biquad.rs  compressor.rs  deepfilter.rs  deepfilter_ffi.rs  deesser.rs  eq.rs  gate.rs  limiter.rs  loudness.rs  mod.rs  noise_suppressor.rs  rnnoise.rs  true_peak.rs  util.rs  vad.rs
rust-core/src/dsp/deepfilter_ffi/: tests.rs
rust-core/src/dsp/vad/: tests.rs
rust-core/tests/: stress_tests.rs
(+8 files in other folders)
